[gd_scene load_steps=19 format=3 uid="uid://3qldugr1p1bp"]

[ext_resource type="Script" uid="uid://bmfileexqn7ts" path="res://scripts/enemies/slime.gd" id="1_f8v8i"]
[ext_resource type="Texture2D" uid="uid://bck7gtcvv7v6u" path="res://sprites/slime_animation.png" id="2_6l62n"]
[ext_resource type="Texture2D" uid="uid://b223xj5tdo00p" path="res://sprites/hit_area.aseprite" id="3_sa3pb"]
[ext_resource type="PackedScene" uid="uid://bvlufu52ba8je" path="res://resources/HealthComponent.tscn" id="3_v1vdr"]
[ext_resource type="PackedScene" uid="uid://cy5y3bov72uj5" path="res://resources/HurtboxComponent.tscn" id="4_q47xw"]
[ext_resource type="PackedScene" uid="uid://blqtrri1sqel1" path="res://instances/hp_bar.tscn" id="5_6l62n"]
[ext_resource type="AnimationNodeStateMachine" uid="uid://cn03bg2du4rho" path="res://animationTree/slime.tres" id="6_v1vdr"]
[ext_resource type="Script" uid="uid://cn1n3p4i0vtf0" path="res://resources/AttackComponent.gd" id="7_q47xw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_p2iuu"]
radius = 15.033297

[sub_resource type="CircleShape2D" id="CircleShape2D_hbnt5"]
radius = 32.0

[sub_resource type="Animation" id="Animation_v1vdr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ProgressBar:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-16, -20)]
}

[sub_resource type="Animation" id="Animation_6l62n"]
resource_name = "idle"
length = 1.00005
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_q47xw"]
resource_name = "jump"
length = 2.60002
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8000001, 2, 2.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4, 0.6, 1.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2(0, 0), Vector2(0, -10), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ProgressBar:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.4, 0.6, 1.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2(-16, -20), Vector2(-16, -40), Vector2(-16, -20)]
}

[sub_resource type="Animation" id="Animation_sa3pb"]
resource_name = "move_left"
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [24, 25]
}

[sub_resource type="Animation" id="Animation_hbnt5"]
resource_name = "move_right"
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [36, 37]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kbr5r"]
_data = {
&"RESET": SubResource("Animation_v1vdr"),
&"idle": SubResource("Animation_6l62n"),
&"jump": SubResource("Animation_q47xw"),
&"move_left": SubResource("Animation_sa3pb"),
&"move_right": SubResource("Animation_hbnt5")
}

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_q47xw"]
graph_offset = Vector2(-577.35455, 203.85452)
nodes/AnimationNodeStateMachine/node = ExtResource("6_v1vdr")
nodes/AnimationNodeStateMachine/position = Vector2(-80, 140)
node_connections = [&"output", 0, &"AnimationNodeStateMachine"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6l62n"]
radius = 76.02631

[node name="CharacterBody2D" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 16
collision_mask = 15
input_pickable = true
platform_floor_layers = 4294967280
script = ExtResource("1_f8v8i")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_p2iuu")

[node name="AttackComponent" type="Node2D" parent="."]
script = ExtResource("7_q47xw")
attack_damage = 5
metadata/_custom_type_script = "uid://cn1n3p4i0vtf0"

[node name="Area2D" type="Area2D" parent="AttackComponent"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackComponent/Area2D"]
shape = SubResource("CircleShape2D_hbnt5")

[node name="hit_area" type="Sprite2D" parent="AttackComponent"]
visible = false
texture = ExtResource("3_sa3pb")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_6l62n")
hframes = 12
vframes = 4

[node name="HealthComponent" parent="." instance=ExtResource("3_v1vdr")]
max_health = 25

[node name="HurtboxComponent" parent="." instance=ExtResource("4_q47xw")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_p2iuu")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
debug_enabled = true

[node name="ProgressBar" parent="." instance=ExtResource("5_6l62n")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_kbr5r")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeBlendTree_q47xw")
advance_expression_base_node = NodePath("..")
anim_player = NodePath("../AnimationPlayer")
parameters/AnimationNodeStateMachine/conditions/attacking = false
parameters/AnimationNodeStateMachine/moving/blend_position = -0.38772076

[node name="ChaseDetection" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChaseDetection"]
shape = SubResource("CircleShape2D_6l62n")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="animation_finished" from="AnimationTree" to="." method="_on_animation_tree_animation_finished"]
[connection signal="animation_finished" from="AnimationTree" to="AttackComponent" method="_on_animation_tree_animation_finished"]
[connection signal="body_entered" from="ChaseDetection" to="." method="_on_chase_detection_body_entered"]
[connection signal="body_exited" from="ChaseDetection" to="." method="_on_chase_detection_body_exited"]
